# power_market-geospatial-platform

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  prompt.txt  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py
backend/: __init__.py  config.py  database.py  main.py
backend/api/: assets.py  outages.py  pricing.py  zones.py
backend/ingestion/: __init__.py  csv_loader.py  geojson_loader.py  parquet_loader.py
backend/models/: __init__.py  asset.py  outage.py  pricing.py  zone.py
backend/schemas/: __init__.py  asset.py  common.py  outage.py  pricing.py  zone.py
backend/services/: __init__.py  asset_service.py  outage_service.py  pricing_service.py  zone_service.py
frontend/: index.html
frontend/static/css/: main.css
frontend/static/js/: api.js  config.js  details.js  layers.js  main.js  timeline.js
scripts/: init_db.sql  seed_data.py
